@@ -6,7 +6,7 @@
 
     <groupId>com.interactuamovil.apps.contactosms</groupId>
     <artifactId>im-contactosms-sdk-java</artifactId>
-    <version>5.0.0</version>
+    <version>5.2.0</version>
     <packaging>jar</packaging>
 
     <name>im-contactosms-sdk-java</name>
@@ -49,11 +49,11 @@
         
         <!-- Dependency versions -->
         <jackson.version>2.18.2</jackson.version>
-        <logback.version>1.5.12</logback.version>
+        <logback.version>1.2.12</logback.version>
         <junit.version>5.11.3</junit.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
         <commons-configuration2.version>2.11.0</commons-configuration2.version>
-        <slf4j.version>2.0.16</slf4j.version>
+        <slf4j.version>1.7.36</slf4j.version>
         
         <!-- Plugin versions -->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
@@ -137,13 +137,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.14.2</version>
+            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.14.2</version>
+            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -162,9 +162,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <release>21</release>
+                    <source>21</source>
+                    <target>21</target>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>-Xlint:all</arg>
                         <arg>-parameters</arg>
                     </compilerArgs>
@@ -176,17 +176,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
 
             <!-- JAR plugin -->
